# SoSad

./: .gitignore  ARCHITECTURE.md  COMPARISON.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  workflow.yml
_site/search/: search_index.json
api/client/: index.html
benchmarks/: __init__.py  run.py
deploy/landing/: index.html
deploy/wiki/: index.html  sitemap.xml
docs/: index.md
docs/api/: client.md  commands.md  components.md
docs/guides/: architecture.md  checks.md  client.md  commands.md  components.md  context.md  di.md  errors.md  events.md  installation.md  middleware.md  migration.md  plugins.md  quickstart.md  rest.md  settings.md  tasks.md
examples/: basic_bot.py  compat_bot.py  component_bot.py  full_featured_bot.py  gateway_bot.py  rest_bot.py
guides/architecture/: index.html
guides/client/: index.html
guides/commands/: index.html
guides/components/: index.html
guides/context/: index.html
guides/di/: index.html
guides/installation/: index.html
site/: 404.html  index.html  sitemap.xml
sosad/: __init__.py  __main__.py  _meta.py  banner.txt
tests/: __init__.py  test_api.py  test_checks.py  test_commands.py  test_compat.py  test_compat_extended.py  test_components.py  test_di.py  test_errors.py  test_imports.py  test_metrics.py  test_middleware.py  test_persistent.py  test_prefix.py  test_rate_limit.py  test_tasks.py
wiki/: Client.md  Commands.md  Context.md  Dependency-Injection.md  Home.md  Installation.md  Middleware.md  Migration-from-discord.py.md  Quick-Start.md
(+142 files in other folders)
